<resources>
    <string name="app_name">CoinCex</string>
    <string name="action_settings">Settings</string>
    <string name="checking_now">Checking Bitcoin price now…</string>
    <string name="cap">Market Cap</string>
    <string name="vol">Volume 24h</string>
    <string name="dom">BTC Dominance</string>
    <string name="search">Search</string>
    <string name="logo">Logo</string>
    <string name="grado">Rank</string>
    <string name="capit">Capitalizz./Volume</string>
    <string name="prezzo">Prezzo/Variazione</string>
    <string name="share">Share</string>
    <string name="home">Market</string>
    <string name="news">Crypto News</string>
    <string name="preferiti">Preferiti</string>
    <string name="notizie">Notizie</string>
    <string name="login">Login</string>
    <string name="favorites">favorites</string>
    <string name="login_text">Accedi all\'account CoinCex</string>
    <string name="preferred">preferred</string>
    <string name="wallet">Wallet</string>
</resources>