<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Platform.MaterialComponents.Light">

    <ImageView
        android:id="@+id/logo_image13"
        android:layout_width="10dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="280dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_image11"
        android:layout_width="10dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_image12"
        android:layout_width="10dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/cap"
        android:textAlignment="center"
        android:textColor="@color/acquamarina_scuro"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/logo_image11"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:text="@string/vol"
        android:textAlignment="center"
        android:textColor="@color/acquamarina_scuro"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/logo_image12"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="20dp"
        android:text="@string/dom"
        android:textAlignment="center"
        android:textColor="@color/acquamarina_scuro"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/logo_image13"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/grado"
        android:textAlignment="center"
        android:textColor="@color/acquamarina_scuro"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:ignore="MissingConstraints,SmallSp,TextContrastCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/capit"
        android:textAlignment="center"
        android:textColor="@color/acquamarina_scuro"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:ignore="SmallSp,TextContrastCheck" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listCoin"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/prezzo"
        android:textAlignment="center"
        android:textColor="@color/acquamarina_scuro"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:ignore="SmallSp,TextContrastCheck" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:drawableStart="?android:attr/actionModeWebSearchDrawable"
        android:drawablePadding="5dp"
        android:drawableTint="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:text="@string/search"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="6dp"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="6dp"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>